<?xml version="1.0"?>
<package format="3">
  <name>cone_detection</name>
  <version>0.1.0</version>
  <description>YOLO‐based cone detection node</description>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
</package>
