<?xml version="1.0"?>
<package format="3">
  <name>cone_detector</name>
  <version>0.1.0</version>
  <description>YOLO-based cone detector using ZED depth</description>
  <maintainer email="strandfrederic@outlook.com">Frederic Strand</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
</package>
