<?xml version="1.0"?>
<package format="3">
  <name>cone_detector</name>
  <version>0.1.0</version>
  <description>YOLO-based cone detector using ZED depth</description>
  <maintainer email="strandfrederic@outlook.com">Frederic Strand</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>cone_detector_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>